--- a/app.yaml
+++ b/app.yaml
@@ -7,7 +7,7 @@ services:
     repo: SLFMR1/ADAdev.io
     branch: main
   run_command: npx serve -s dist -l $PORT
-  build_command: npm install && npm run build
+  build_command: npm ci && npm run build
   environment_slug: node-js
   instance_count: 1
   instance_size_slug: basic-xxs
