--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "adadev",
   "version": "1.0.0",
   "description": "ADAdev: Cardano Resources - A modern web application showcasing Cardano development resources",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "npx serve -s dist -l $PORT",
+    "start": "node server.js",
     "postinstall": "npm run build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
@@ -16,6 +16,9 @@
     "@react-three/fiber": "^8.18.0",
     "@react-three/postprocessing": "^2.19.1",
     "@types/three": "^0.178.1",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
+    "express": "^4.18.2",
     "lucide-react": "^0.263.1",
     "openai": "^4.104.0",
     "react": "^18.2.0",
