--- a/env.example
+++ b/env.example
@@ -1,11 +1,21 @@
 # ADAdev Environment Variables
 # Copy this file to .env and fill in your actual values
 
-# OpenAI API Key (Required for AI features)
+# OpenAI API Key (Required for AI features - server-side only)
 VITE_OPENAI_API_KEY=your_openai_api_key_here
+
+# GitHub Token (Optional - for higher rate limits)
+GITHUB_TOKEN=your_github_token_here
 
 # Environment
 NODE_ENV=production
 
 # Port (optional, defaults to 3000)
-PORT=3000 
+PORT=3000
+
+# Security: CORS Origins (comma-separated for production)
+CORS_ORIGINS=https://adadev.io,https://www.adadev.io
+
+# Security: Rate Limiting
+MAX_REQUESTS_PER_HOUR=60
+MIN_REQUEST_INTERVAL=1000 
