--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,10 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Security: Redirect HTTP to HTTPS in production
+    # Uncomment the following lines when you have SSL certificates
+    # return 301 https://adadev.io$request_uri;
+
     # Gzip compression
     gzip on;
     gzip_vary on;
@@ -11,12 +15,14 @@ server {
     gzip_proxied expired no-cache no-store private must-revalidate auth;
     gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/javascript;
 
-    # Security headers
+    # Enhanced Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header X-Content-Type-Options "nosniff" always;
-    add_header Referrer-Policy "no-referrer-when-downgrade" always;
-    add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https://api.github.com https://api.openai.com; frame-ancestors 'none';" always;
+    add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
     # Handle React Router (SPA)
     location / {
@@ -40,5 +46,14 @@ server {
         access_log off;
         return 200 "healthy\n";
         add_header Content-Type text/plain;
+    }
+
+    # Security: Block access to sensitive files
+    location ~ /\. {
+        deny all;
+    }
+
+    location ~ \.(env|log|sql|conf)$ {
+        deny all;
     }
 } 
